fixing background color for legibility

--- a/css/main.css
+++ b/css/main.css
@@ -345,7 +345,7 @@ html{
     left: 0;
     width: 100%;
     height: 4rem;
-    background-color: rgba(255,255,255,0.5);
+    background-color: rgba(0,0,0,0.5);
     backdrop-filter: blur(0.2rem);
     -webkit-backdrop-filter: blur(0.2rem);
     z-index: 99;
@@ -359,7 +359,7 @@ html{
   }
 
   #image_marker{
-    margin-top: 0.2rem;
+    margin-top: 0.1rem;
     height: 3rem;
   }
 
